@@ -32,6 +32,11 @@ sync_wsize_kb = tape=1048576,dir=1048576
 # (this parameter is only used by the fifo write schedulers)
 fifo_max_write_per_grouping = 0
 
+# Consider grouping to choose a dir. Value should be either "true" or "false".
+# Default is "false".
+# If the value is not "true" or "false", the default value "false" is set.
+grouping_on_dir = false
+
 # Locate pre-locks expirancy, in ms
 # Positive value, may be equal to 0 and lesser or equal than 2^64
 # 0 means immediate expirancy i.e. the scheduler will not retain the medium
